# db_study_citations

./: README.md  main.py  pyproject.toml
data/: citations.db
models/: __init__.py  article.py  taxon.py  taxon_article.py
schemas/: article.py  taxon.py  taxon_article.py
templates/: article.html  base.html  index.html  macros.html  taxon.html  taxon_article.html
