[project]
name = "db-study-citations"
version = "0.1.0"
description = "База данных таксонов и научных статей с веб-интерфейсом"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "starlette>=0.40.0",
]
